--- a/registration/registration-client/src/main/resources/messages_en.properties
+++ b/registration/registration-client/src/main/resources/messages_en.properties
@@ -21,20 +21,12 @@ OTP_VALIDATION_SUCCESS_MESSAGE = OTP validation Successful#TYPE#SUCCESS
 OTP_VALIDATION_ERROR_MESSAGE = Incorrect or expired OTP#TYPE#ERROR
 OTP_VALIDITY=OTP Valid for#TYPE#INFO
 MINUTES=minutes
-<<<<<<< HEAD
 USER_ON_BOARDING_EXCEPTION=Onboard Exception
 FINGER_PRINT_MATCH = Fingerprint match not found
 IRIS_MATCH = Iris match not found
 FACE_MATCH = Face match not found
 UIN_INVALID= Please enter valid UIN
 RID_INVALID= Please enter valid RID
-=======
-FINGER_PRINT_MATCH = Fingerprint match not found#TYPE#ERROR
-IRIS_MATCH = Iris match not found#TYPE#ERROR
-FACE_MATCH = Face match not found#TYPE#ERROR
-UIN_INVALID= Please enter valid UIN#TYPE#ERROR
-RID_INVALID= Please enter valid RID#TYPE#ERROR
->>>>>>> 0120_reg_team_dev
 THRESHOLD=Threshold
 PARENT_BIO_MSG=Registration processor will not be able to authenticate individual as fingerprint and iris capture have been turned off.#TYPE#ERROR
 USER_NAME_VALIDATION=Invalid Username#TYPE#ERROR
@@ -396,6 +388,7 @@ LAST_UPDATED=Last Uploaded - on
 403_MESSAGE=Please scan again
 202_MESSAGE=Device is not available
 409_MESSAGE=Device is not available
+101_MESSAGE=Device is not Registered
 STREAMING_PREP_MESSAGE=Streaming is starting
 STREAMING_INIT_MESSAGE=Streaming is on
 CAPTURING=Capturing
@@ -404,8 +397,5 @@ ALERT_NOTE_LABEL=Note
 ALERT_FAILED_LABEL=Failed
 SECONDARY_LANG_MISSING=Language choice missing in Configuration, cannot proceed ahead without the same#TYPE#INFO
 PRIMARY_LANG_MISSING=Platform language is missing. Please check with Admin#TYPE#INFO
-<<<<<<< HEAD
-=======
 
 AUTH_TOKEN_NOT_FOUND=Unable to fetch authorization token
->>>>>>> 0120_reg_team_dev
