MOS-1334 : fixed for null exceptions
Former-commit-id: c39b75707dc1cd658d29219d63824db30756ac35
Former-commit-id: a880c1ac3f28698cb7ea8d259e04a79e6d89ca0b

--- a/registration/registration-client/src/main/resources/labels_en.properties
+++ b/registration/registration-client/src/main/resources/labels_en.properties
@@ -29,6 +29,7 @@ parentUinId=Parent/Guardian UIN
 uinUpdateNavLbl=/ UIN Update
 parentName=Parent/Guardian Name
 scan=Scan
+stream=Stream
 titleDemographicPane=Demographic Details
 poaDocuments=POA Document
 poiDocuments=POI Document
