--- a/registration/registration-client/src/main/resources/labels_en.properties
+++ b/registration/registration-client/src/main/resources/labels_en.properties
@@ -343,3 +343,4 @@ mappingDevices = Mapping devices to machine
 uploadingData = Uploading Local / Registration Data
 updatingBiometrics = Updating Operator Biometrics
 parentOrGuardian = Parent / Guardian
+saveToDevice=Note: Opting to save packets to device will by default export all listed packets
