MOS-26151-Save to device
Former-commit-id: 6727962706d23bf6811703071268938a258c0cc0
Former-commit-id: 2510f38464898f1b9eec450d35151a02f335cb9f

--- a/registration/registration-client/src/main/resources/labels_en.properties
+++ b/registration/registration-client/src/main/resources/labels_en.properties
@@ -343,4 +343,4 @@ mappingDevices = Mapping devices to machine
 uploadingData = Uploading Local / Registration Data
 updatingBiometrics = Updating Operator Biometrics
 parentOrGuardian = Parent / Guardian
-saveToDevice=Note: Opting to save packets to device will by default export all listed packets
+saveToDeviceLable=Note: Opting to save packets to device will by default export all listed packets
