--- a/registration/registration-client/src/main/resources/messages_fr.properties
+++ b/registration/registration-client/src/main/resources/messages_fr.properties
@@ -1,5 +1,6 @@
 USER_ON_BOARDING_EXCEPTION=Onboard Exception
 #Login
+UNABLE_LOAD_LOGIN_SCREEN_LANGUAGE_NOT_SET = Le système a rencontré une erreur technique. Administrateur pour configurer la ou les configurations linguistiques nécessaires#TYPE#ERROR
 UNABLE_LOAD_LOGIN_SCREEN = Impossible de charger l'écran de connexion#TYPE#ERROR
 BIOMETRIC_DISABLE_SCREEN_1 = Le mode d'authentification n'est pas pris en charge par la configuration au niveau du processus.#TYPE#INFO
 BIOMETRIC_DISABLE_SCREEN_2 = S'il vous plaît contacter l'administrateur.#TYPE#INFO
