MOS-30429: validation in progress message has been added Former-commit-id: c4a0c1721ac4e6f36d1ad4ff9a22aae3a8b8650e Former-commit-id: 02b25e339f330f4253b1bd09acfad13569c603e8

--- a/registration/registration-client/src/main/resources/labels_fr.properties
+++ b/registration/registration-client/src/main/resources/labels_fr.properties
@@ -346,3 +346,4 @@ uploadingData = Téléchargement de données locales / d'enregistrement
 updatingBiometrics = Mise à jour de la biométrie d'opérateur
 saveToDeviceLable=Remarque: Le choix d'enregistrer les paquets sur l'appareil exportera par défaut tous les paquets répertoriés
 parentOrGuardian = Parent ou tuteur
+dedupeMessage=Des validations sont en cours d'exécution. S'il vous plaît, attendez.
